# Vloop-harness

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Makefile  PRODUCT.md  README.md  get_multi_columns_test.py  get_multi_columns_test_generic.py  get_multi_columns_test_generic2.py  get_multi_columns_test_pg.py  package.json  package_release.py  pyproject.toml
.github/scripts/: ci_failure_agent.py
.github/workflows/: ci-failure-agent.yml  ci.yml  release.yml
.impeccable/: design.json
.impeccable/live/: config.json
.jules/: sentinel.md
.playwright-mcp/: page-2026-04-24T15-46-24-061Z.yml  page-2026-04-24T15-46-44-170Z.yml  page-2026-04-24T16-00-02-794Z.yml
DOCS/: README.md  ai-engine.md  api-reference.md  architecture.md  component-development.md  frontend-guide.md  full-stack-agents-harness-plan.md  quickstart.md
benchmarks/: README.md  results.txt  test_apply_input_map.py
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  COMPONENTS.md  CONTRIBUTING.md  DATA_FLOW.md  DECISIONS.md  GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  INTERFACES.md  OPERATOR_RUNBOOK.md  README.md  SCALABILITY.md  SETUP.md  TROUBLESHOOTING.md  api-spec.md  architecture.md  db-schema.md  deployment.md  frontend-guide.md  ipc-schema.md  tools.md
docs/ADRs/: 001-quic-over-tcp.md  002-rust-kernel-isolation.md  003-ansi-stripping-middleware.md
docs/api/: grpc-contracts.md  telemetry-schema.md  uds-routing.md
docs/architecture/: security-model.md  state-machine.md  system-context.md
docs/config/: kernel-settings.md  network-whitelisting.md  policy-engine.md
docs/kernel/: sandbox.md
docs/ui/: DESIGN.md
docs/usage/: agent-integration.md  failsafe-ui.md  local-dev.md
harness/: __init__.py  main.py  settings.py  window.py
harness-core/: Cargo.toml  entitlements.plist  tauri.conf.json
harness-core/capabilities/: default.json
harness-core/src/: completions.rs  config.rs  lib.rs  main.rs  permissions.rs  service.rs  tools.rs
harness-core/src/api/: mod.rs  routes.rs  ws_handler.rs
harness-core/src/commands/: db.rs  fs.rs  gateway.rs  host.rs  mod.rs  process.rs  terminal.rs
harness-core/src/config/: app_config.rs
harness-core/src/services/db/: mod.rs  models.rs  pool.rs
harness-core/src/services/db/migrations/: 0001_initial.sql  0002_telemetry_lock.sql
harness-core/src/services/fs/: git.rs  mod.rs  vfs.rs  watcher.rs
harness-core/src/services/gateway/: channel.rs  mod.rs  registry.rs  router.rs
harness-core/src/services/gateway/adapters/: http.rs  mod.rs  stdio.rs  unix_socket.rs  websocket.rs
harness-core/src/services/host/: lan_server.rs  mod.rs  qr_service.rs  session_token.rs
harness-core/src/services/process/: manifest.rs  mod.rs  port_manager.rs  registry.rs  supervisor.rs
harness-core/src/services/terminal/: manager.rs  mod.rs  session.rs
harness-core/src/telemetry/: immutable_log.rs  mod.rs
harness-ui/: index.html  package-lock.json  package.json
harness-ui/src/: App.tsx  index.css
harness/components/: __init__.py  counter.py  dashboard.py
harness/core/: __init__.py  alerting.py  auth.py  base_component.py  cache.py  component_tree.py  diff_utils.py  logger.py  main_process.py  metrics.py  permissions.py  process_manager.py  rate_limit.py  resource_monitor.py  rollback.py  secret_redaction.py  service_manager.py  state_store.py
harness/cron/: asyncio_scheduler.py  base.py  celery_scheduler.py  executor.py  factory.py
inference-backend/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
inference-backend/src/inference_backend/: __init__.py  config.py  db.py  main.py
inference-backend/src/inference_backend/api/routes/: agent.py  health.py  infer.py  module.py  pipeline.py
inference-backend/src/inference_backend/api/ws/: stream.py
inference-backend/src/inference_backend/dspy_core/: __init__.py  lm_config.py  module_registry.py  optimizers.py  pipeline_registry.py
inference-backend/src/inference_backend/dspy_core/agent_loops/: __init__.py  chain_of_thought.py  multi_agent.py  plan_execute.py  react.py  tool_call.py
inference-backend/src/inference_backend/postgres/: server.py
inference-backend/src/inference_backend/postgres/scripts/: docker_postgres.yml
inference-backend/src/inference_backend/self_modify/: __init__.py  rollback.py  validator.py  watcher.py  writer.py
inference-backend/src/inference_backend/telemetry/: logger.py
inference-backend/src/inference_backend/tools/: registry.py
inference-backend/src/inference_backend/tools/builtin/: db_query.py  file_rw.py  http_request.py  shell_exec.py
inference-backend/src/inference_backend/tools/sandbox/: docker_runner.py
inference-backend/tests/: test_api.py  test_ci_failure_agent.py
proto/: sandbox.proto
react/: index.html  package-lock.json  package.json  playwright.config.ts  root.html  tsconfig.json  vite.config.ts
scripts/: build-all.sh  dev.sh  setup.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/modules/: completions.rs  health.rs  ipc.rs  main.rs  mod.rs  sandbox.rs  sandbox_grpc.rs  service.rs  settings_protocol.rs  terminal.rs  tools.rs  vault.rs
src-tauri/src/modules/ui/: fallback.rs  settings.html
src-tauri/static/: index.html
tests/: conftest.py  test_agent_models.py  test_agent_routes.py  test_alerting.py  test_analytics_routes.py  test_app_generator.py  test_base_agent.py  test_channels.py  test_chat_routes.py  test_component_package.py  test_component_tree.py  test_component_validation.py  test_confirmation.py  test_context_cleaner.py  test_cron.py  test_db_tool.py  test_e2e_integration.py  test_eval_routes.py  test_filesystem_tool.py  test_injector.py  test_metrics.py  test_model_registry.py  test_optimization.py  test_permissions.py  test_pipelines.py  test_policy_engine.py  test_proxy_routes.py  test_query_tracer.py  test_repository.py  test_resource_monitor.py  test_sandbox_client.py  test_service_manager.py  test_smoke_tests.py  test_state_store.py  test_storage_extended.py  test_terminal_tool.py  test_vector_store.py  test_view_validation.py  test_views_routes.py
(+170 files in other folders)
