[package]
name = "harness-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "harness_core_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri             = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell    = "2"
tauri-plugin-fs       = "2"
tauri-plugin-process  = "2"
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
tokio             = { version = "1", features = ["full"] }
sqlx              = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "migrate"] }
portable-pty      = "0.8"
notify            = "6"
git2              = "0.18"
axum              = "0.7"
axum-extra        = { version = "0.9", features = ["cookie"] }
tower-http        = { version = "0.5", features = ["cors", "trace"] }
tokio-tungstenite = "0.21"
qrcode            = "0.14"
image             = { version = "0.25", default-features = false, features = ["png"] }
uuid              = { version = "1", features = ["v4"] }
chrono            = { version = "0.4", features = ["serde"] }
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow            = "1"
thiserror         = "1"
once_cell         = "1"
parking_lot       = "0.12"
toml              = "0.8"
hmac              = "0.12"
sha2              = "0.10"
rand              = "0.8"
base64            = "0.22"
dashmap           = "5"
local-ip-address  = "0.6"
async-trait       = "0.1"
reqwest           = { version = "0.12", features = ["json"] }
futures-util      = "0.3"
dirs-next         = "2"
hex               = "0.4"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.52", features = ["Win32_System_Threading"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
