[package]
name = "vloop-harness"
version = "0.2.0"
edition = "2021"
description = "Vloop Harness Rust Base"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.4", features = ["derive", "env"] }
dotenvy = "0.15"
ctrlc = { version = "3.4", features = ["termination"] }
uuid = { version = "1.8", features = ["v4"] }
wry = "0.55"
headless_chrome = { version = "1.0.21", default-features = false }
rusqlite = { version = "0.31", features = ["bundled"] }
shlex = "1.3"
regex = "1.10"
dirs = "5.0"
base64 = "0.22"
tao = "0.35"



