[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inference-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "dspy-ai>=2.4",
    "pydantic>=2.7",
    "httpx>=0.27",
    "watchfiles>=0.21",
    "gitpython>=3.1",
    "structlog>=24.1",
    "python-multipart>=0.0.9",
    "websockets>=12",
    "aiohttp>=3.9",
    "psycopg2-binary>=2.9",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
docker = ["docker>=7.0"]
dev = ["pytest>=8", "httpx", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["src/inference_backend"]
