[package]
name = "vloop-harness"
version = "0.2.0"
description = "Vloop Harness - AI Engineering Workbench"
authors = ["Vloop"]
license = "MIT"
repository = "https://github.com/vloop/vloop-harness"
edition = "2021"

[lib]
name = "vloop_harness_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }
tonic-build = "0.12.3"

[dependencies]
# Tauri
tauri = { version = "2.10.3", features = ["devtools"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web server (for Rust AI engine)
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Utilities
dotenvy = "0.15"
ctrlc = { version = "3.4", features = ["termination"] }
uuid = { version = "1.8", features = ["v4"] }
rusqlite = { version = "0.31", features = ["bundled"] }
shlex = "1.3"
regex = "1.10"
dirs = "5.0"
base64 = "0.22"

# Browser automation
headless_chrome = { version = "1.0.21", default-features = false }

# Logging
log = "0.4"
once_cell = "1.21.4"
ssh2 = "0.9.5"
port_scanner = "0.1.5"
portable-pty = "0.9.0"
bollard = "0.21.0"
futures = "0.3.32"
lazy_static = "1.5.0"
quinn = "0.11.9"
tonic = "0.12.3"
prost = "0.13.4"
tokio-stream = { version = "0.1.18", features = ["net"] }
eframe = "0.34.3"
egui = "0.34.3"
chrono = "0.4.45"
